--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -23,3 +23,6 @@ block content
               | 
               a.btn.btn-xs.btn-default(href='/users/#{user._id}?_method=DELETE') 삭제
     a.btn.btn-primary(href='/users/new') 사용자추가
+
+<div class="fb-like" data-share="true" data-width="450" data-show-faces="true">
+</div>
