add a books page

--- a/views/hosts.jade
+++ b/views/hosts.jade
@@ -4,13 +4,13 @@ block content
   #main.container.loading
     .row
       .col-sm-9
-        include ./includes/todo-main
+        include ./includes/host-main
       .col-sm-3.side
-        include ./includes/todo-side
+        include ./includes/host-side
     .spinner
       .background
       .foreground
         p
           i.fa.fa-circle-o-notch.fa-spin.fa-4x
         p Loading...
-  script(type='text/javascript', src='/javascripts/todos.js')
+  script(type='text/javascript', src='/javascripts/hosts.js')
