--- a/views/includes/host-main.jade
+++ b/views/includes/host-main.jade
@@ -1,22 +1,23 @@
-form#form-task.form-inline(class='todos')
+h3 숙소 등록
+form#form-task.form-inline(class='hosts')
   .form
     .main
-      input(type='text', id='content', name='content', placeholder='해야할 일이 무엇인가요?')
+      input(type='text', id='content', name='content', placeholder='회원님의 숙소를 간단히 소개해주세요.')
     .sub
       .form-group
         select.form-control(name='category')
-          option(value='개인', selected) 개인
-          option(value='가족') 가족
-          option(value='업무') 업무
+          option(value='서울', selected) 서울
+          option(value='경기') 경기
+          option(value='부산') 부산
           option(value='기타') 기타
       .form-group
         select.form-control(name='priority')
-          option(value='3') 중요
-          option(value='2', selected) 보통
-          option(value='1') 사소
+          option(value='3', selected) 개인실
+          option(value='2') 다인실
+          option(value='1') 집전체
   .actions
-      button#post-task.btn.btn-primary.btn-lg.btn-block(type='button') 저장
-
+      button#post-task.btn.btn-primary.btn-lg.btn-block(type='button') 등록
+h3 등록된 숙소 보기
 ul.tasks
 
 .no-task 
@@ -33,12 +34,12 @@ script#task-template(type='text/template').
       </span>
     <% } %>
     <span class='priority p<%= priority %>'>
-      <%= (priority === 3) ? "중요" : ((priority === 1) ? "사소": "보통") %>
+      <%= (priority === 3) ? "집전체" : ((priority === 1) ? "개인실": "다인실") %>
     </span>
     <a href='#' class='remove'><i class='fa fa-trash-o'></i></a>
   </li>
       
 script.
   $(function() {
-    var todo = new TaskController();    
+    var host = new TaskController();    
   });
