--- a/views/users/new.jade
+++ b/views/users/new.jade
@@ -5,16 +5,16 @@ block content
     h1.page-header 회원가입
     form(action='/users', method='POST')
       .form-group
-        label(for='name') Name
+        label(for='name') 이름
         input.form-control(type='text', id='name', name='name', placeholder='Your name')
       .form-group
-        label(for='email') Email address
+        label(for='email') 이메일 주소
         input.form-control(type='email', id='email', name='email', placeholder='Email')
       .form-group
-        label(for='password') Password
+        label(for='password') 비밀번호
         input.form-control(type='password', id='password', name='password', placeholder='Password')
       .form-group
-        label(for='password_confirmation') Password 확인
+        label(for='password_confirmation') 비밀번호 확인
         input.form-control(type='password', id='password_confirmation', name='password_confirmation', placeholder='Password')
       div.form-actions
         a.btn.btn-default(href='javascript:window.history.back();') 뒤로 
