--- a/views/index.jade
+++ b/views/index.jade
@@ -3,19 +3,21 @@ extends layout
 block hero-unit
   .jumbotron
     .container
-      h1 BIGBANG-TODO
+      h1 aircnc
 
 block content
   .container
     .row
       .col-md-6
         h3 서비스 목적
-        p 본 서비스는 웹프로그래밍 수업을 위해서 sample로 만들어보는 것입니다. 
+        p Airbnb가 되고 싶은 페이지 입니다. 
       .col-md-6
         h3 주요 기능
         ul
+          li 회원 가입 (한 user 가 여행자와 호스트로 활동 가능)
           li 사용자 관리
-          li 할 일 기록
-          li 기록 내용: 분류, 내용, 중요도, deadline
-          li 완료된 일 체크
+          li 여행자 : 숙소 예약
+          li 호스트 : 숙소 등록
+
+
   
