--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='ko')
   head
     block title
-      title BBDO
+      title aircnc
     meta(charset='UTF-8')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap-theme.css')
@@ -25,6 +25,4 @@ html(lang='ko')
               each msg in texts
                 p= msg           
       block content
-
-    block footer
-      include ./includes/footer
+      
